--- a/styles/styles.css
+++ b/styles/styles.css
@@ -285,6 +285,9 @@ h1, h2, h3, h4, h5, h6{
         font-size: 14px;
     }
     /* Slider main header for low resolutions */
+    body{
+        width: 100vw;
+    }
     .main-header *{
         display: none;
     }
@@ -332,19 +335,29 @@ h1, h2, h3, h4, h5, h6{
     img{
         margin: 0 !important;
     }
+    .padded-section{
+        padding: 2.5rem 1.5rem;
+    }
+    .less-padded-section{
+        padding: 2rem 1rem;
+    }
     }
 @media (max-width: 480px) {
     :root{
         font-size: 12px; /* Used to change all relatives dependant on rem */
     }
     /* Sections lower resolutions */
-    .left-image-section img{
+    .left-image-section > img{
         position: absolute;
+        right: 50%;
+        transform: translatex(50%);
     }
-    .right-image-section img{
+    .right-image-section > img{
         position: absolute;
+        right: 50%;
+        transform: translatex(50%);
     }
-    .right-image-section div, .left-image-section div{
+    .right-image-section .text-container, .left-image-section .text-container,.left-image-section .compact-text-container, .right-image-section .compact-text-container{
         min-width: 80%;
         position: relative;
         z-index: 100;
@@ -364,6 +377,9 @@ h1, h2, h3, h4, h5, h6{
     }
     .sides-padded-section{
         padding: 0;
+    }
+    .sm-hide{
+        display: none;
     }
 
 }
